BACKLOG-11280 Fix css to have proper no wrap, increase transition

--- a/src/components/PrimaryNav/PrimaryNav.scss
+++ b/src/components/PrimaryNav/PrimaryNav.scss
@@ -12,7 +12,7 @@ $primaryNav: 56px;
     background: $color-dark;
     overflow: hidden;
 
-    transition: width 0.2s;
+    transition: width 0.3s;
 
     &.expanded {
         position: fixed;
