--- a/src/styles/global/_layout.scss
+++ b/src/styles/global/_layout.scss
@@ -18,7 +18,8 @@
 
     &_nowrap {
         display: flex;
-        flex-direction: row;
+        flex-flow: row;
+        flex-wrap: nowrap;
     }
 
     &_reverse {
